--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,20 +1,54 @@
 # This workflow is designed to build PRs for AHC. Note that it does not actually publish AHC, just builds and test it.
 # Docs: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Test PR
+# SolarMC: Changed this to publish AHC to our repo
+name: Java CI
 
 on:
-  pull_request:
-    branches: [ master ]
+  push:
+    branches: [ '*' ]
 
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build and test with Maven
-      run: mvn test -Ptest-output
+      - uses: actions/checkout@v2
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'zulu'
+      - name: Build with Maven
+        run: mvn clean -B -U verify -Ptest-output
+  deploy:
+    runs-on: ubuntu-20.04
+    if: github.ref == 'refs/heads/solar'
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'zulu'
+          server-id: solar-repo
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+      - name: Build with Maven
+        run: mvn clean -B -U deploy
+        env:
+          MAVEN_USERNAME: ${{ secrets.MAVEN_CD_USER }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_CD_PASS }}
+
