--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>gg.solarmc.asynchttpclient</groupId> <!-- Solar -->
   <artifactId>async-http-client-project</artifactId>
-  <version>2.12.4-SNAPSHOT</version>
+  <version>2.12.4</version>
   <packaging>pom</packaging>
 
   <name>Asynchronous Http Client Project</name>
